# clash-vexriscv

./: .gitignore  Cargo.toml  README.md  cabal.project  dmem0.mem  dmem1.mem  dmem2.mem  dmem3.mem  flake.nix  imem0.mem  imem1.mem  imem2.mem  imem3.mem  rust-toolchain.toml  shell.nix  vexriscv_gdb.cfg  vexriscv_sim.cfg
.cargo/: config.toml
.github/docker/: Dockerfile  build-and-publish-docker-image.sh
.github/workflows/: ci.yml
.reuse/: dep5
bittide-sys/: Cargo.toml
bittide-sys/src/: panic_handler.rs
bittide-sys/src/elf_loading/: mod.rs  validation.rs
bittide-sys/tests/: elf_validation.proptest-regressions  elf_validation.rs
clash-vexriscv/: Makefile  README.md  Setup.hs  clash-vexriscv.cabal
clash-vexriscv-example/: Setup.hs  clash-vexriscv-example.cabal
clash-vexriscv-example/data/: MyProject.scala
clash-vexriscv-example/src/: MyProject.hs
clash-vexriscv-sim/: Setup.hs  clash-vexriscv-sim.cabal
clash-vexriscv-sim/app/: Clash.hs  ElfToHex.hs  HdlTest.hs  VexRiscvChainSimulation.hs  VexRiscvSimulation.hs
clash-vexriscv-sim/data/: Example.scala  Example2.scala  vexriscv_chain_gdbb.cfg  vexriscv_chain_sim.cfg  vexriscv_gdb.cfg  vexriscv_sim.cfg
clash-vexriscv-sim/src/Utils/: Cpu.hs  Instance.hs  Interconnect.hs  ProgramLoad.hs  Storage.hs
clash-vexriscv-sim/tests/: tests.hs
clash-vexriscv-sim/tests/Tests/: Jtag.hs  JtagChain.hs
clash-vexriscv/data/vexriscv/: Makefile  build.sbt
clash-vexriscv/data/vexriscv/ffi/: impl.cpp  vimpl.cpp
clash-vexriscv/data/vexriscv/lib/: build-vexriscv.py
clash-vexriscv/example-cpu/: ExampleCpu.yaml  VexRiscv.v  VexRiscvTrace.v  VexRiscvWrapped.v
clash-vexriscv/example-cpu/src/main/scala/example/: ExampleCpu.scala
clash-vexriscv/src/: VexRiscv.hs
clash-vexriscv/src/VexRiscv/: BlackBox.hs  ClockTicks.hs  FFI.hsc  Internal.hs  JtagTcpBridge.hs  JtagTcpBridgeHaskell.hs  Paths.hs  Random.hs  Setup.hs  TH.hs
clash-vexriscv/src/ffi/: impl.cpp  interface.h
clash-vexriscv/tests/unittests/Tests/VexRiscv/: ClockTicks.hs  Random.hs
debug-test/src/: main.rs
firmware/bootloader/: Cargo.toml
firmware/bootloader/src/: main.rs  uart.rs
firmware/loaded-program/: Cargo.toml  memory.x
firmware/payload-program/: Cargo.toml  memory.x
firmware/payload-program/src/: main.rs  uart.rs
nix/: nixpkgs.nix  openocd-riscv.nix
vex-riscv/: Makefile  vex-riscv.cabal
vex-riscv-sim/: vex-riscv-sim.cabal
vex-riscv-sim/app/: VexRiscvSimulation.hs
vex-riscv-sim/src/Utils/: Cpu.hs  Interconnect.hs  ProgramLoad.hs  Storage.hs
vex-riscv-sim/src/VexRiscvSim/: Uart.hs
vex-riscv-sim/tests/: tests.hs
vex-riscv-sim/vex-test-programs/: Cargo.toml
vex-riscv/bittide-cpu/src/main/scala/bittide/: BittideCpu.scala
vex-riscv/example-cpu/src/main/scala/example/: ExampleCpu.scala
vex-riscv/src/: VexRiscv.hs
